--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     environment {
-        registry = "150172465894.dkr.ecr.us-east-1.amazonaws.com/node"
+        registry = "150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine"
     }
 
     stages {
@@ -15,7 +15,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          dockerImage = docker.build registry
+          dockerImage = sudo docker.build registry
         }
       }
     }
@@ -24,17 +24,17 @@ pipeline {
     stage('Pushing to ECR') {
      steps{
          script {
-                sh 'docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
-                sh 'docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+                sh 'sudo docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+                sh 'sudo docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
          }
         }
-      }    
+      }
 
     stage('Docker Run') {
      steps{
          script {
-                sh 'ssh -i /home/ubuntu/finalProject.pem ubuntu@10.0.2.11'
-                sh 'docker run -d -p 8080:8080 --rm --name node 150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine'
+                sh 'sudo ssh -i /home/ubuntu/finalProject.pem ubuntu@10.0.2.11'
+                sh 'sudo docker run -d -p 8080:8080 --rm --name node 150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine'
             }
       }
     }
