--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          sh  'sudo docker build -t 150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine .'
+          sh  ' docker build -t 150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine .'
         }
       }
     }
@@ -24,8 +24,8 @@ pipeline {
     stage('Pushing to ECR') {
      steps{
          script {
-                sh 'sudo docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
-                sh 'sudo docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+                sh ' docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+                sh ' docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
          }
         }
       }
@@ -34,7 +34,7 @@ pipeline {
      steps{
          script {
                 sh ' ssh -i /home/ubuntu/finalProject.pem ubuntu@10.0.2.11'
-                sh 'sudo docker run -d -p 8080:8080 --rm --name node 150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine'
+                sh ' docker run -d -p 8080:8080 --rm --name node 150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine'
             }
       }
     }
