--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          sh  'docker build .'
+          sh  'docker build https://github.com/sirishavsp/finalProject.git#main'
         }
       }
     }
