--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
     stage('Pushing to ECR') {
      steps{
          script {
-                sh ' docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+                sh ' docker login -u AWS -p $(/usr/local/bin/aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
                 sh ' docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
          }
         }
