--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,8 @@ pipeline {
     agent any
     environment {
         registry = "150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine"
+        AWS_ACCESS_KEY_ID     = credentials('jenkins-aws-secret-key-id')
+        AWS_SECRET_ACCESS_KEY = credentials('jenkins-aws-secret-access-key')
     }
 
     stages {
@@ -24,7 +26,7 @@ pipeline {
     stage('Pushing to ECR') {
      steps{
          script {
-                sh ' docker login -u AWS -p $(/usr/bin/aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+                sh ' docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
                 sh ' docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
          }
         }
