--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,8 +25,10 @@ pipeline {
     // Uploading Docker images into AWS ECR
     stage('Pushing to ECR') {
      steps{
+     withAWS(credentials: 'aws-credentials', region: 'us-east-1') {
+      sh ' docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+         }
          script {
-                sh ' docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
                 sh ' docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
          }
         }
