--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,13 +25,14 @@ pipeline {
     // Uploading Docker images into AWS ECR
     stage('Pushing to ECR') {
      steps{
-     withAWS(credentials: 'aws-credentials', region: 'us-east-1') {
-      sh ' docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
-         }
+     withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: 'aws-key', usernameVariable: 'AWS_ACCESS_KEY_ID', passwordVariable: 'AWS_SECRET_ACCESS_KEY']]) {
+   
          script {
                 sh ' docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
-         }
-        }
+                sh ' docker login -u AWS -p $(AWS(ecr get-login-password --region us-east-1)) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
+             }
+            }
+          }
       }
 
     stage('Docker Run') {
