--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,8 +28,9 @@ pipeline {
      withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws-credentials', accessKeyVariable: 'AWS_ACCESS_KEY_ID', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
    
          script {
-                sh ' docker login -u AWS -p $(AWS(ecr get-login-password --region us-east-1)) 150172465894.dkr.ecr.us-east-1.amazonaws.com/nodeimage:latest'
+                sh ' docker login -u AWS -p AWS(ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/nodeimage:latest'
                 sh ' docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/nodeimage:latest'
+               
              }
             }
           }
