--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@
 pipeline {
     agent any
     environment {
-        registry = "150172465894.dkr.ecr.us-east-1.amazonaws.com/node:alpine"
+        registry = "150172465894.dkr.ecr.us-east-1.amazonaws.com/node"
     }
 
     stages {
@@ -17,30 +17,31 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          sh  'docker build -t nodeimage .'
+          dockerImage = docker.build registry
         }
       }
     }
 
     // Uploading Docker images into AWS ECR
     stage('Pushing to ECR') {
-     steps{
-     withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws-credentials', accessKeyVariable: 'AWS_ACCESS_KEY_ID', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
-   
-         script {
-                sh 'docker login -u AWS -p $(AWS(ecr get-login-password --region us-east-1)) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
-                sh 'docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/nodeimage:latest'
-               
-             }
+        steps{
+            script {
+                sh 'docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 150172465894.dkr.ecr.us-east-1.amazonaws.com/node '
+                sh 'docker push 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
             }
-          }
-      }
+        }
+    }
 
     stage('Docker Run') {
      steps{
          script {
-                sh 'ssh -i /home/ubuntu/finalProject.pem ubuntu@10.0.2.11'
-                sh 'docker run -d -p 8080:8080 --rm --name node 150172465894.dkr.ecr.us-east-1.amazonaws.com/nodeimage:latest'
+             sshagent(credentials : ['aws_ec2']){
+
+                sh 'ssh -o StrictHostKeyChecking=no -i finalProject.pem ubuntu@10.0.2.11'
+
+             }
+                //sh 'ssh -i /login/finalProject.pem ubuntu@10.0.2.11'
+                sh 'docker run -d -p 8081:8080 --rm --name node 150172465894.dkr.ecr.us-east-1.amazonaws.com/node'
             }
       }
     }
